src/main/java/com/qmino/objectpredicates/antlr/PredicateGrammarParser.java
// Generated from C:/Users/Yves/Work/Code/qmino/JavaFieldSelector/src/main/java/com/qmino/objectpredicates/PredicateGrammar.g4 by ANTLR 4.13.1

package com.qmino.objectpredicates.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PredicateGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, WS=6, AND=7, OR=8, NOT=9, IN=10, 
		OPERATOR=11, NULLVALUE=12, BOOLEAN=13, METHOD=14, NUMBER=15, STRING=16, 
		DATE=17;
	public static final int
		RULE_start = 0, RULE_expression = 1, RULE_numberInExpression = 2, RULE_stringInExpression = 3, 
		RULE_dateOperatorExpression = 4, RULE_numberOperatorExpression = 5, RULE_stringOperatorExpression = 6, 
		RULE_doubleMethodOperatorExpression = 7, RULE_methodBooleanExpression = 8, 
		RULE_bracketExpression = 9, RULE_andExpression = 10, RULE_orExpression = 11, 
		RULE_notExpression = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "expression", "numberInExpression", "stringInExpression", "dateOperatorExpression", 
			"numberOperatorExpression", "stringOperatorExpression", "doubleMethodOperatorExpression", 
			"methodBooleanExpression", "bracketExpression", "andExpression", "orExpression", 
			"notExpression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "','", "'}'", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, "WS", "AND", "OR", "NOT", "IN", "OPERATOR", 
			"NULLVALUE", "BOOLEAN", "METHOD", "NUMBER", "STRING", "DATE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PredicateGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PredicateGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PredicateGrammarParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredicateGrammarListener ) ((PredicateGrammarListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredicateGrammarListener ) ((PredicateGrammarListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PredicateGrammarVisitor ) return ((PredicateGrammarVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			expression();
			setState(27);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public DateOperatorExpressionContext dateOperatorExpression() {
			return getRuleContext(DateOperatorExpressionContext.class,0);
		}
		public NumberOperatorExpressionContext numberOperatorExpression() {
			return getRuleContext(NumberOperatorExpressionContext.class,0);
		}
		public StringOperatorExpressionContext stringOperatorExpression() {
			return getRuleContext(StringOperatorExpressionContext.class,0);
		}
		public MethodBooleanExpressionContext methodBooleanExpression() {
			return getRuleContext(MethodBooleanExpressionContext.class,0);
		}
		public DoubleMethodOperatorExpressionContext doubleMethodOperatorExpression() {
			return getRuleContext(DoubleMethodOperatorExpressionContext.class,0);
		}
		public NumberInExpressionContext numberInExpression() {
			return getRuleContext(NumberInExpressionContext.class,0);
		}
		public StringInExpressionContext stringInExpression() {
			return getRuleContext(StringInExpressionContext.class,0);
		}
		public BracketExpressionContext bracketExpression() {
			return getRuleContext(BracketExpressionContext.class,0);
		}
		public AndExpressionContext andExpression() {
			return getRuleContext(AndExpressionContext.class,0);
		}
		public OrExpressionContext orExpression() {
			return getRuleContext(OrExpressionContext.class,0);
		}
		public NotExpressionContext notExpression() {
			return getRuleContext(NotExpressionContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredicateGrammarListener ) ((PredicateGrammarListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredicateGrammarListener ) ((PredicateGrammarListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PredicateGrammarVisitor ) return ((PredicateGrammarVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expression);
		try {
			setState(40);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(29);
				dateOperatorExpression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(30);
				numberOperatorExpression();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(31);
				stringOperatorExpression();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(32);
				methodBooleanExpression();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(33);
				doubleMethodOperatorExpression();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(34);
				numberInExpression();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(35);
				stringInExpression();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(36);
				bracketExpression();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(37);
				andExpression();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(38);
				orExpression();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(39);
				notExpression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NumberInExpressionContext extends ParserRuleContext {
		public TerminalNode METHOD() { return getToken(PredicateGrammarParser.METHOD, 0); }
		public TerminalNode IN() { return getToken(PredicateGrammarParser.IN, 0); }
		public List<TerminalNode> NUMBER() { return getTokens(PredicateGrammarParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(PredicateGrammarParser.NUMBER, i);
		}
		public List<TerminalNode> WS() { return getTokens(PredicateGrammarParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(PredicateGrammarParser.WS, i);
		}
		public NumberInExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numberInExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredicateGrammarListener ) ((PredicateGrammarListener)listener).enterNumberInExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredicateGrammarListener ) ((PredicateGrammarListener)listener).exitNumberInExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PredicateGrammarVisitor ) return ((PredicateGrammarVisitor<? extends T>)visitor).visitNumberInExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumberInExpressionContext numberInExpression() throws RecognitionException {
		NumberInExpressionContext _localctx = new NumberInExpressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_numberInExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(42);
				match(WS);
				}
			}

			setState(45);
			match(METHOD);
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(46);
				match(WS);
				}
			}

			setState(49);
			match(IN);
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(50);
				match(WS);
				}
			}

			setState(53);
			match(T__0);
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(54);
				match(WS);
				}
			}

			setState(57);
			match(NUMBER);
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1 || _la==WS) {
				{
				{
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(58);
					match(WS);
					}
				}

				setState(61);
				match(T__1);
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(62);
					match(WS);
					}
				}

				setState(65);
				match(NUMBER);
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(71);
			match(T__2);
			setState(73);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(72);
				match(WS);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StringInExpressionContext extends ParserRuleContext {
		public TerminalNode METHOD() { return getToken(PredicateGrammarParser.METHOD, 0); }
		public TerminalNode IN() { return getToken(PredicateGrammarParser.IN, 0); }
		public List<TerminalNode> STRING() { return getTokens(PredicateGrammarParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(PredicateGrammarParser.STRING, i);
		}
		public List<TerminalNode> WS() { return getTokens(PredicateGrammarParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(PredicateGrammarParser.WS, i);
		}
		public StringInExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringInExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredicateGrammarListener ) ((PredicateGrammarListener)listener).enterStringInExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredicateGrammarListener ) ((PredicateGrammarListener)listener).exitStringInExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PredicateGrammarVisitor ) return ((PredicateGrammarVisitor<? extends T>)visitor).visitStringInExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StringInExpressionContext stringInExpression() throws RecognitionException {
		StringInExpressionContext _localctx = new StringInExpressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stringInExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(75);
				match(WS);
				}
			}

			setState(78);
			match(METHOD);
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(79);
				match(WS);
				}
			}

			setState(82);
			match(IN);
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(83);
				match(WS);
				}
			}

			setState(86);
			match(T__0);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(87);
				match(WS);
				}
			}

			setState(90);
			match(STRING);
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1 || _la==WS) {
				{
				{
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(91);
					match(WS);
					}
				}

				setState(94);
				match(T__1);
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(95);
					match(WS);
					}
				}

				setState(98);
				match(STRING);
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(104);
			match(T__2);
			setState(106);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				{
				setState(105);
				match(WS);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DateOperatorExpressionContext extends ParserRuleContext {
		public List<TerminalNode> DATE() { return getTokens(PredicateGrammarParser.DATE); }
		public TerminalNode DATE(int i) {
			return getToken(PredicateGrammarParser.DATE, i);
		}
		public TerminalNode OPERATOR() { return getToken(PredicateGrammarParser.OPERATOR, 0); }
		public List<TerminalNode> WS() { return getTokens(PredicateGrammarParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(PredicateGrammarParser.WS, i);
		}
		public TerminalNode METHOD() { return getToken(PredicateGrammarParser.METHOD, 0); }
		public TerminalNode NULLVALUE() { return getToken(PredicateGrammarParser.NULLVALUE, 0); }
		public DateOperatorExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dateOperatorExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredicateGrammarListener ) ((PredicateGrammarListener)listener).enterDateOperatorExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredicateGrammarListener ) ((PredicateGrammarListener)listener).exitDateOperatorExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PredicateGrammarVisitor ) return ((PredicateGrammarVisitor<? extends T>)visitor).visitDateOperatorExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DateOperatorExpressionContext dateOperatorExpression() throws RecognitionException {
		DateOperatorExpressionContext _localctx = new DateOperatorExpressionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dateOperatorExpression);
		int _la;
		try {
			setState(183);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,37,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(108);
					match(WS);
					}
				}

				setState(111);
				match(DATE);
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(112);
					match(WS);
					}
				}

				setState(115);
				match(OPERATOR);
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(116);
					match(WS);
					}
				}

				setState(119);
				match(DATE);
				setState(121);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
				case 1:
					{
					setState(120);
					match(WS);
					}
					break;
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(123);
					match(WS);
					}
				}

				setState(126);
				match(DATE);
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(127);
					match(WS);
					}
				}

				setState(130);
				match(OPERATOR);
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(131);
					match(WS);
					}
				}

				setState(134);
				match(METHOD);
				setState(136);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,24,_ctx) ) {
				case 1:
					{
					setState(135);
					match(WS);
					}
					break;
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(138);
					match(WS);
					}
				}

				setState(141);
				match(METHOD);
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(142);
					match(WS);
					}
				}

				setState(145);
				match(OPERATOR);
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(146);
					match(WS);
					}
				}

				setState(149);
				match(DATE);
				setState(151);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,28,_ctx) ) {
				case 1:
					{
					setState(150);
					match(WS);
					}
					break;
				}
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(153);
					match(WS);
					}
				}

				setState(156);
				match(DATE);
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(157);
					match(WS);
					}
				}

				setState(160);
				match(OPERATOR);
				setState(162);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(161);
					match(WS);
					}
				}

				setState(164);
				match(NULLVALUE);
				setState(166);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,32,_ctx) ) {
				case 1:
					{
					setState(165);
					match(WS);
					}
					break;
				}
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(169);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(168);
					match(WS);
					}
				}

				setState(171);
				match(NULLVALUE);
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(172);
					match(WS);
					}
				}

				setState(175);
				match(OPERATOR);
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(176);
					match(WS);
					}
				}

				setState(179);
				match(DATE);
				setState(181);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,36,_ctx) ) {
				case 1:
					{
					setState(180);
					match(WS);
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NumberOperatorExpressionContext extends ParserRuleContext {
		public List<TerminalNode> NUMBER() { return getTokens(PredicateGrammarParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(PredicateGrammarParser.NUMBER, i);
		}
		public TerminalNode OPERATOR() { return getToken(PredicateGrammarParser.OPERATOR, 0); }
		public List<TerminalNode> WS() { return getTokens(PredicateGrammarParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(PredicateGrammarParser.WS, i);
		}
		public TerminalNode METHOD() { return getToken(PredicateGrammarParser.METHOD, 0); }
		public TerminalNode NULLVALUE() { return getToken(PredicateGrammarParser.NULLVALUE, 0); }
		public NumberOperatorExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numberOperatorExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredicateGrammarListener ) ((PredicateGrammarListener)listener).enterNumberOperatorExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredicateGrammarListener ) ((PredicateGrammarListener)listener).exitNumberOperatorExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PredicateGrammarVisitor ) return ((PredicateGrammarVisitor<? extends T>)visitor).visitNumberOperatorExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumberOperatorExpressionContext numberOperatorExpression() throws RecognitionException {
		NumberOperatorExpressionContext _localctx = new NumberOperatorExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_numberOperatorExpression);
		int _la;
		try {
			setState(260);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,58,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(186);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(185);
					match(WS);
					}
				}

				setState(188);
				match(NUMBER);
				setState(190);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(189);
					match(WS);
					}
				}

				setState(192);
				match(OPERATOR);
				setState(194);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(193);
					match(WS);
					}
				}

				setState(196);
				match(NUMBER);
				setState(198);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,41,_ctx) ) {
				case 1:
					{
					setState(197);
					match(WS);
					}
					break;
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(201);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(200);
					match(WS);
					}
				}

				setState(203);
				match(NUMBER);
				setState(205);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(204);
					match(WS);
					}
				}

				setState(207);
				match(OPERATOR);
				setState(209);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(208);
					match(WS);
					}
				}

				setState(211);
				match(METHOD);
				setState(213);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,45,_ctx) ) {
				case 1:
					{
					setState(212);
					match(WS);
					}
					break;
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(216);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(215);
					match(WS);
					}
				}

				setState(218);
				match(METHOD);
				setState(220);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(219);
					match(WS);
					}
				}

				setState(222);
				match(OPERATOR);
				setState(224);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(223);
					match(WS);
					}
				}

				setState(226);
				match(NUMBER);
				setState(228);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,49,_ctx) ) {
				case 1:
					{
					setState(227);
					match(WS);
					}
					break;
				}
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(231);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(230);
					match(WS);
					}
				}

				setState(233);
				match(NUMBER);
				setState(235);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(234);
					match(WS);
					}
				}

				setState(237);
				match(OPERATOR);
				setState(239);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(238);
					match(WS);
					}
				}

				setState(241);
				match(NULLVALUE);
				setState(243);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,53,_ctx) ) {
				case 1:
					{
					setState(242);
					match(WS);
					}
					break;
				}
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(246);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(245);
					match(WS);
					}
				}

				setState(248);
				match(NULLVALUE);
				setState(250);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(249);
					match(WS);
					}
				}

				setState(252);
				match(OPERATOR);
				setState(254);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(253);
					match(WS);
					}
				}

				setState(256);
				match(NUMBER);
				setState(258);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,57,_ctx) ) {
				case 1:
					{
					setState(257);
					match(WS);
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
